fix: spacing size of comment tree

--- a/src/client/pages/index.css
+++ b/src/client/pages/index.css
@@ -49,7 +49,13 @@
   color: #828282;
 }
 
+.comment-tree tr,
+.comment-tree td {
+  padding: 1px;
+}
+
 .comment {
+  margin-top: 8px;
   max-width: 1215px;
   overflow-wrap: anywhere;
   font-size: 9pt;
@@ -71,10 +77,10 @@
   color: #000000;
 }
 
-.comment .reply span {
+.comment .reply a {
   text-decoration: underline;
-  cursor: pointer;
-  margin: 8px 0 0;
+  color: #000000;
+  margin-top: 8px;
 }
 
 .vote-links {
